# stock

./: .gitignore  README.md  STOCK.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
assets/css/: style.css
assets/js/: site.js
data/: source_registry.json
examples/: raw_news_sample.json  sample_brief.json
public/: index.html
public/reports/: 2026-03-19_daily_master_report.html  index.html
reports/: 2026-03-19_daily_master_report.md  index.html
src/dailyinsight/: __init__.py  brief_builder.py  cli.py  config.py  html.py  input_loader.py  llm.py  models.py  orchestrator.py  prompts.py  render.py  source_registry.py
tests/: test_orchestrator.py
